        修复 LogManager 中错误的导入 [from src.pulucas... -> from pulucas].
        变更依赖 [pyfiglet -> art].
        修改 Function.Author_Lucas 的实现并标记为弃用.
        添加函数 Function.ASCII_Art.
        修改 Logmanager.Initialize 中关于 ASCII Art 生成部分的实现.
        为 Function 内的函数添加标准化的注释.
    1.1.1:
        这个版本上传之后出现无法 pip 到的问题, 遂改版本号为 1.1.2 重新上传一次.
    1.1.2:
        修复 Poetry 创建项目时忘记使用 poetry install 命令来进行基础配置导致的 src 无法缺省的bug.
    1.1.3
        为 LogManager 中 LogOutput 的参数 Level 添加候选.
        修复关于 from pylucas.Function import ... 无法导入的问题(通过在Function文件夹内新建__init__.py).
    2.0.0
        修复 Function 中 ASCII_Art 缺少返回值 -> LineCount 的问题.
        修复 Function 中 ASCII_Art 默认字体被硬编码的问题.
        修复 LogManager 中 Author 的 ASCII Art 无法自定义的问题.
        修复 Path_Toml 中 Path_Toml 被硬编码为 '' 导致无法正常读取的问题.
        修复 ConfigEditor 中 Get_Keys 接受一个存在的 Key_Locate 但是因 Key_Locate 最后一位的值非字典而导致的 KeyError 报错, 改为返回空元组.
        修复 ConfigEditor 在 Temporary 状态下因为 __Path_Toml 可能为 ['Temporary', ''] 中一个的问题, 改为若 __Path_Toml 初始为 '' 则进入 Temporary 状态.
        修复 ConfigEditor 中 Save_Toml 在判断 ConfigEditor 处于 Temporary 状态却仍进行保存行为的错误.

        为 LogManager 添加注释.
        为 ConfigEditor 添加注释.

        为 ConfigEditor 添加方法 Get_NestedPaths, 该方法可以通过递归获取所有最底层非字典值的键路径.

        在不影响使用方式的前提下重构部分 LogManager, 并添加了方法 Log 用于替代 LogOutput, 添加了 LogManager 全局 DoPrint(即将变更为 LogConsole) 变量.

        为 ConfigEditor 添加方法 toDict 用以取代 Get_Data_Toml, 实现层面无区别.
        将 Set_Data_Toml 标记为将被移除.
        修复 ConfigEditor 在 Initialize 中没有给 self.__Path_Toml 赋值导致无法正常读取和保存的 BUG.
        修复 ConfigEditor 在 Save_Toml 因错误的 return 导致的与保存相关的代码无效的 BUG.

        修改 ConfigEditor 中对内存态的 ConfigEditor 实例的实现方式.
        对 ConfigEditor 的接口进行破坏性更新, 不再与旧版本兼容.
        恢复 ConfigEditor 对 json 文件的读写支持.
        将 ConfigEditor 的支持扩展简化为增加继承 ConfigEditor_Basic 类后重写 Load 与 Save 方法.
        移除 ConfigEditor 中的部分方法.
        大量修改 ConfigEditor 的方法名与属性名.

        从 Function 中移除函数 Author_Lucas.

        为 result 添加方法 append 与 update, 并将属性 args 类型改为 list.

        更改 ConfigEditor 的结构而不改变其应用层面的实现.