@@ -1,0 +1,11 @@
+--------------------------------------------------------
+ __       __    __    ______      ___           _______.
+|  |     |  |  |  |  /      |    /   \         /       |
+|  |     |  |  |  | |  ,----'   /  ^  \       |   (----`
+|  |     |  |  |  | |  |       /  /_\  \       \   \    
+|  `----.|  `--'  | |  `----. /  _____  \  .----)   |   
+|_______| \______/   \______|/__/     \__\ |_______/    
+                                                        
+--------------------------------------------------------
+Log File Created At 2025-05-21 10-51-11
+2025-05-21 10-51-11 |-| [Level: <Normal> | Module: <__main__>]: Invalid Information.
