@@ -1,0 +1,5 @@
+from pylucas import LogManager
+
+if __name__ == '__main__':
+    test = LogManager(Author='Lucas')
+    test.Log()
