@@ -232,17 +232,3 @@ class ConfigEditorSL_Json(ConfigEditorSL):
         with open(file=self._Flie, mode='w', encoding='utf-8') as File:
             json.dump(Data, File, ensure_ascii=False, indent=4)
             File.close()
-
-if __name__ == '__main__':
-    test = ConfigEditor(File=r'test/config.json', Data={"Mods": {}, "Groups": {}})
-
-    print(test)
-    print(test.ToDict)
-
-    test.SetValue('1.2.3.4', {})
-    test.SetValue('2.2.3.4', "123")
-    test.SetValue('3.2.3.4', "123")
-    asd = test.GetValue('1.2.3.4')
-
-    print(asd.ToDict)
-    print(test.ToDict)
